Sat Mar  6 23:42:47 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* tests/docbook/Makefile.am: small fix to typo

Sat Mar  6 23:05:11 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* Makefile.am, tests/Makefile.am, tests/REC/Makefile.am,
	  tests/REC1/Makefile.am, tests/REC2/Makefile.am,
	  tests/XSLTMark/Makefile.am, tests/docbook/Makefile.am,
	  tests/exslt/common/Makefile.am, tests/exslt/date/Makefile.am,
	  tests/exslt/functions/Makefile.am, tests/exslt/math/Makefile.am,
	  tests/exslt/sets/Makefile.am, tests/exslt/strings/Makefile.am,
	  tests/extensions/Makefile.am, tests/general/Makefile.am,
	  tests/keys/Makefile.am, tests/multiple/Makefile.am,
	  tests/namespaces/Makefile.am, tests/numbers/Makefile.am,
	  tests/reports/Makefile.am, test/xmlspec/Makefile.am,
	  tests/general/bug-60.err, tests/docbook/result/html/gdp-handbook.err,
	  tests/REC/test-2.5-1.err:
	  Major enhancement to "make tests". All but Python tests
	  cleaned up to produce minimum summary output if no problems.
	* tests/general/bug-145.xsl, tests/general/bug-145.err,
	  tests/docs/Makefile.am, tests/docs/bug-145.xml:
	  Added test case for bugzilla bug 135938
	  
Thu Mar  4 23:02:18 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/xsltutils.h, libxslt/xsltutils.c, libxslt/preproc.c:
	  fixed problem with dictionary handling (bug 135938).
	* doc/EXSLT/*: fixed a few more "href_base" files.

Wed Mar  3 21:33:33 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* doc/*, doc/html/*, doc/EXSLT/*: rebuilt the docs to fix
	  the "href_base" problem.

Fri Feb 27 01:04:47 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* configure.in, config.h.in: added test for localtime_r
	* libexslt/date.c: added usage of localtime_r if present on
	  system (bug 129983, suggested by Vasily Tchekalkin)

Thu Feb 26 16:59:45 CET 2004 Daniel Veillard <daniel@veillard.com>

	* libxslt/keys.c libxslt/pattern.c: removed the last use
	  of _private that time in the input document, use the psvi